Whitespace issue on mobile res fixed

--- a/react-team-portfolio/src/App.css
+++ b/react-team-portfolio/src/App.css
@@ -1,6 +1,8 @@
 #root {
   width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .logo {
